# kwordle

./: Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
src/: array.rs  game.rs  guess.rs  guesses.rs  letter.rs  letter_state.rs  letters.rs  lib.rs  word.rs
src/classic/: mod.rs
src/classic/words_list/: mod.rs
src/guess/: letter_state.rs  mod.rs
src/guess/guesses/: mod.rs
src/letter/: error.rs  letter_set.rs  mod.rs  serde.rs
src/letter/letters/: error.rs  mod.rs
src/word/: constants.rs  error.rs  letters_map.rs  mod.rs  serde.rs  validity.rs
src/word/list/: collection.rs  core.rs  error.rs  mod.rs  structs.rs
src/word/list/answers/: mod.rs
src/word/list/collection/: mod.rs
src/word/list/collection/adapter/: hash_set.rs  mod.rs
src/word/list/guessable/: mod.rs
src/word/list/guesses/: mod.rs
src/word/words/: mod.rs
src/words_list/: core.rs  hash_set.rs  mod.rs
