[package]
name = "kwordle"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/perpetualcacophony/kwordle"
readme = "README.md"
license-file = "LICENSE.md"

[dependencies.rand]
version = "0.8.5"
optional = true
default-features = false

[dependencies.serde]
version = "1.0.203"
optional = true

[dev-dependencies]
assert-impl = "0.1.3"
paste = "1.0.15"
pretty_assertions = "1.4.0"

[features]
default = ["rand_full", "serde_derive"]
rand = ["dep:rand"]
rand_full = ["rand", "rand/std", "rand/std_rng"]
classic_words = []
serde = ["dep:serde"]
serde_derive = ["serde", "serde/derive"]
